<?xml version="1.0" encoding="utf-8"?>
<!-- item -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/namebox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <TextView
            android:id="@+id/goods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="left"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/orange" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/picbox"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_below="@+id/namebox"
        android:background="@color/gray"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginLeft="10dp"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:id="@+id/nametable"
            android:layout_width="0sp"
            android:layout_height="100sp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_toLeftOf="@+id/other"
            android:layout_toRightOf="@+id/icon"
            android:paddingTop="5dp" >

            <LinearLayout
                android:id="@+id/L1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/outDates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outdate"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/outdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/L2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/L1"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/kinds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kind"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/kind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/L3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/L2"
                android:layout_marginTop="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/make"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/make"
                        android:textColor="@color/lightgray" />

                    <TextView
                        android:id="@+id/whomake"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lightgray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy"
                        android:textColor="@color/lightgray" />

                    <TextView
                        android:id="@+id/wherebuy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lightgray" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/other"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/othericon" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/moneybox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picbox"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <TextView
            android:id="@+id/orderm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/ordermoney"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/ordermoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/allm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/allmoney"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/allmoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/needm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/needmoney"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/needmoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/orange"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>